--- a/sablony/sablona1.twig
+++ b/sablony/sablona1.twig
@@ -1,4 +1,5 @@
 {% block php %}<!-- php --> {% endblock %}
+<!-- sablona pro vsechny stranky-->
 <!DOCTYPE html>
 <html lang="cs">
 <head>
@@ -39,7 +40,7 @@
 ================================================== -->
 <body>
 	<header id="banner" class="container-fluid">
-		<a href="{{ makeUrl('uvod') }}"><img src="public/picture/head.png" class="img-responsive" alt="obr" ></a>
+		<a href="{{ makeUrl('uvod') }}"><img src="public/picture/NTIS4.jpg" class="img-responsive" alt="obr" ></a>
 	</header>
 	<!-- Modal -->
 
